--- a/src/app/views/heart/home.html.erb
+++ b/src/app/views/heart/home.html.erb
@@ -1,5 +1,7 @@
-<h1>Heart#hello</h1>
-<p>Find me in app/views/heart/hello.html.erb</p>
+<h1>Hello World!</h1>
+<p>みなさん、こんにちは。ハートアプリへようこそ！</p>
+<p>ここでは小中高生の心の教室などに通っているコミュニケーションをするのが苦手な人のためのサイトです。</p>
+<p>自分の1日の生活の出来事を投稿してみたり、慣れてきたら学校の先生やお父さんお母さん・サポーターさんに協力してもらって同じ境遇にある人とのテレビ電話にも挑戦してみよう！</p>
 
 <h1>helloアクションで呼び出されるページです<h1>
 <p><%= @hello %></p>
