--- a/src/app/views/new.html.erb
+++ b/src/app/views/new.html.erb
@@ -1,1 +1,31 @@
-<h3></h3>
+<h3>アカウント新規登録</h3>
+
+<% form_for @user do |f| %>
+
+  <table>
+    <th><%=f.  %></th>
+    <td><%=f.  %></td>
+  </table>
+
+  <table>
+    <th><%=f.  %></th>
+    <td><%=f.  %></td>
+  </table>
+
+  <table>
+    <th><%=f.  %></th>
+    <td><%=f.  %></td>
+  </table>
+
+  <table>
+    <th><%=f.  %></th>
+    <td><%=f.  %></td>
+  </table>
+
+  <div>
+    <ul>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+<% end %>
