アカウント新規登録ページ

--- a/src/app/views/new.html.erb
+++ b/src/app/views/new.html.erb
@@ -14,7 +14,7 @@
 
   <table>
     <th><%=f.label :diary "メンバー"  %></th>
-    <td><%=f.text_filed :diary  %></td>
+    <td><%=f.text_area :diary  %></td>
   </table>
 
   <table>
