index.html flash追加

--- a/src/app/views/users/index.html.erb
+++ b/src/app/views/users/index.html.erb
@@ -1,6 +1,10 @@
 
 <h3>ユーザー情報一覧</h3>
 
+<% if flash.notice %>
+  <p class = "notice"><%= flash.notice %></p>
+<% end %>
+
 <table>
   <thead>
     <tr>
