ログイン機能修正

--- a/src/app/views/users/index.html.erb
+++ b/src/app/views/users/index.html.erb
@@ -22,10 +22,9 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.id %></td>
-        <td><%= user.name %></td>
+        <td><%= user.schoolname %></td>
         <td><%= user.email %></td>
-        <td><%= user.age %></td>
-        <td><%= user.introduction %></td>
+        <td><%= user.diary %></td>
         <td><%= user.updated_at %></td>
         <td><%= user.created_at %></td>  
       </tr>
