showアクション編集

--- a/src/app/views/users/index.html.erb
+++ b/src/app/views/users/index.html.erb
@@ -26,6 +26,9 @@
         <td><%= user.diary %></td>
         <td><%= user.updated_at.to_s(:datetime_jp) %></td>
         <td><%= user.created_at.to_s(:datetime_jp)%></td>  
+        <td>
+        <%= link_to"参照",user %>
+        </td>
       </tr>
     <% end %>
    </tbody>
