参照機能追加

--- a/src/app/views/users/index.html.erb
+++ b/src/app/views/users/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= user.id %></td>
         <td><%= user.schoolname %></td>
         <td><%= user.email %></td>
-        <td><%= user.diary %></td>
+        <td><%= user.student %></td>
         <td><%= user.updated_at.to_s(:datetime_jp) %></td>
         <td><%= user.created_at.to_s(:datetime_jp)%></td>  
         <td>
