--- a/src/app/views/users/new.html.erb
+++ b/src/app/views/users/new.html.erb
@@ -13,8 +13,8 @@
   </table>
 
   <table>
-    <th><%=f.label :diary, "メンバー"  %></th>
-    <td><%=f.text_area :diary  %></td>
+    <th><%=f.label :student, "生徒"  %></th>
+    <td><%=f.text_area :student  %></td>
   </table>
 
   <table>
