--- a/src/app/views/users/index.html.erb
+++ b/src/app/views/users/index.html.erb
@@ -14,6 +14,8 @@
       <th>メンバー</th>
       <th>更新日</th>
       <th>作成日</th>
+      <th>参照</th>
+      <th>編集</th>
     </tr>
   </thead>
 
@@ -27,8 +29,12 @@
         <td><%= user.updated_at.to_s(:datetime_jp) %></td>
         <td><%= user.created_at.to_s(:datetime_jp)%></td>  
         <td>
-        <%= link_to"参照",user %>
+          <%= link_to"参照",user %>
         </td>
+        <td>
+          <%= link_to"編集",[:edit, user] %>
+        </td>
+      
       </tr>
     <% end %>
    </tbody>
